--- a/index.html
+++ b/index.html
@@ -1,6 +1,33 @@
+<!DOCTYPE html>
 <html>
-	<body>
-		HELLO DBC!
-		</body>
-		</html>
-		
+  <head>
+    <title>Jack Thatcher</title>
+  </head>
+
+  <body>
+
+    <header> 
+      <h1> Jack Thatcher </h1>
+    </header> 
+    <hr>
+
+    <nav>
+      <ul>
+         <li> <a href = "#"> About Me </a> </li>
+         <li> <a href = "#"> Resume </a> </li>
+         <li> <a href= "#"> Projects </a> </li>
+         <li> <a href = "#"> Contact Me </a> </li>
+      </ul>
+    </nav>
+    <hr>
+
+    
+     <main>
+       <p> This is where the content will go! </p>
+     </main>
+    
+
+    <hr>
+    <footer><p> Jack Thatcher's Offical Page </p></footer>
+  </body>
+</html>
