--- a/blog-template.html
+++ b/blog-template.html
@@ -27,3 +27,17 @@
 
   </body>
 </html>
+
+<!-- 
+How was it to wireframe and create an HTML page with a pair?
+This was turned in late, and by that time there was no one left to pair with. 
+
+Did you find wireframing to be helpful to your development process?
+Yes I liked being able to design in small steps so that I could focus on the skeleton of what the user experience would be.
+
+What did you and your pair decide made a good wireframe? 
+A good wireframe efficiently expresses the layout of the page you are designing.
+
+What new semantic elements did you learn about (if any)?
+I have never used <aside> before this!
+-->
