Add blog-temp css

--- a/index.html
+++ b/index.html
@@ -2,32 +2,42 @@
 <html>
   <head>
     <title>Jack Thatcher</title>
+    <meta charset="utf-8"/>
+    <link rel="stylesheet" type="text/css" href="stylesheets/default.css">
   </head>
 
   <body>
 
-    <header> 
-      <h1> Jack Thatcher </h1>
-    </header> 
-    <hr>
+  <div id="top-container">
+    <div id="header"> 
+      <div id="name-title"> <h1> Jack Thatcher <h1> <br> <h2> A DBC Student </h2> </div>  
 
-    <nav>
-      <ul>
-         <li> <a href = "#"> About Me </a> </li>
-         <li> <a href = "#"> Resume </a> </li>
-         <li> <a href= "#"> Projects </a> </li>
-         <li> <a href = "#"> Contact Me </a> </li>
-      </ul>
-    </nav>
-    <hr>
 
-    
-     <main>
-       <p> This is where the content will go! </p>
-     </main>
-    
+      <div class="header-contact"> <h3> Contact: </h3> <p> jsthatcher96@gmail.com <br> (773)573-6853 </p> </div>
 
-    <hr>
-    <footer><p> Jack Thatcher's Offical Page </p></footer>
+     </div>
+
+    <div id="navbar"> 
+      <div class="nav-container"> 
+        <h3> NAVIGATION </h3>
+          <ul>
+            <li> <a href="../aboutme.hmtl"> About Me </a> </li>
+            <li> <a href="../resume.hmtl"> Resume </a></li>
+            <li> <a href="../projects.hmtl"> Projects </a></li>
+            <li> <a href="../blog-template.hmtl"> DBC Blog </a> </li>
+            <li> <a href="../contact.hmtl"> Contact Me </a> </li>
+         </ul>
+      </div>
+
+    </div>
+    <div id=content> 
+      <div class="content-container"> <p> This is where the content will be going.</div>
+
+    </div>
+
+    </div>
+  </div>
+
+  
   </body>
 </html>
