--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
       <div class="nav-container"> 
         <h3> NAVIGATION </h3>
           <ul>
-            <li> <a href="../aboutme.hmtl"> About Me </a> </li>
-            <li> <a href="../resume.hmtl"> Resume </a></li>
-            <li> <a href="../projects.hmtl"> Projects </a></li>
-            <li> <a href="../blog-template.hmtl"> DBC Blog </a> </li>
-            <li> <a href="../contact.hmtl"> Contact Me </a> </li>
+            <li> <a href="aboutme.hmtl"> About Me </a> </li>
+            <li> <a href="resume.hmtl"> Resume </a></li>
+            <li> <a href="projects.hmtl"> Projects </a></li>
+            <li> <a href="blog-template.hmtl"> DBC Blog </a> </li>
+            <li> <a href="contact.hmtl"> Contact Me </a> </li>
          </ul>
       </div>
 
