--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li> <a href="aboutme.hmtl"> About Me </a> </li>
             <li> <a href="resume.hmtl"> Resume </a></li>
             <li> <a href="projects.hmtl"> Projects </a></li>
-            <li> <a href="blog-template.hmtl"> DBC Blog </a> </li>
+            <li> <a href="blog-template.html"> DBC Blog </a> </li>
             <li> <a href="contact.hmtl"> Contact Me </a> </li>
          </ul>
       </div>
