Update blog index

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
             <li> <a href="aboutme.html"> About Me </a> </li>
             <li> <a href="resume.html"> Resume </a></li>
             <li> <a href="projects.html"> Projects </a></li>
-            <li> <a href="blog-template.html"> DBC Blog </a> </li>
+            <li> <a href="../blog/index.html"> DBC Blog </a> </li>
             <li> <a href="contact.html"> Contact Me </a> </li>
          </ul>
       </div>
 
     </div>
     <div id=content> 
-      <div class="content-container"> <p> This is where the content will be going.</div>
+      <div class="content-container"> <p> This is where the content will be going. </p> </div>
 
     </div>
 
