--- a/aboutme.html
+++ b/aboutme.html
@@ -24,7 +24,7 @@
             <li> <a href="aboutme.html"> About Me </a> </li>
             <li> <a href="resume.html"> Resume </a></li>
             <li> <a href="projects.html"> Projects </a></li>
-            <li> <a href="../blog/index.html"> DBC Blog </a> </li>
+            <li> <a href="blog/index.html"> DBC Blog </a> </li>
             <li> <a href="contact.html"> Contact Me </a> </li>
          </ul>
       </div>
