Add all new files

--- a/index.html
+++ b/index.html
@@ -1,43 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Jack Thatcher</title>
-    <meta charset="utf-8"/>
+<head>
+	<title> Home </title>
+	<meta charset="utf-8"/>
     <link rel="stylesheet" type="text/css" href="stylesheets/default.css">
-  </head>
+</head>
+<body>
 
-  <body>
+<header> 
+<div id = "namePlate"> <h1> Jack Thatcher</h1>
+ <h2> Junior Software Developer </h2> </div> 
+</header>
 
-  <div id="top-container">
-    <div id="header"> 
-      <div id="name-title"> <h1> Jack Thatcher <h1> <br> <h2> A DBC Student </h2> </div>  
-
-
-      <div class="header-contact"> <h3> Contact: </h3> <p> jsthatcher96@gmail.com <br> (773)573-6853 </p> </div>
-
-     </div>
-
-    <div id="navbar"> 
-      <div class="nav-container"> 
-        <h3> NAVIGATION </h3>
-          <ul>
-            <li> <a href="aboutme.html"> About Me </a> </li>
-            <li> <a href="resume.html"> Resume </a></li>
-            <li> <a href="projects.html"> Projects </a></li>
-            <li> <a href="blog/index.html"> DBC Blog </a> </li>
-            <li> <a href="contact.html"> Contact Me </a> </li>
-         </ul>
-      </div>
-
-    </div>
-    <div id=content> 
-      <div class="content-container"> <p> This is where the content will be going. </p> </div>
-
-    </div>
-
-    </div>
-  </div>
-
-  
-  </body>
+</body>
 </html>
