--- a/aboutme.html
+++ b/aboutme.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> Home </title>
+	<title> About Me </title>
 	<meta charset="utf-8"/>
     <link rel="stylesheet" type="text/css" href="stylesheets/default.css">
 </head>
@@ -27,8 +27,8 @@
 
 	<div class = "contentContainer">  </div>
 	<div class = "content">  
-		<h1> Thanks for Stopping By! </h1> 
-		<p> Welcome to my website. Here you can learn about me and the work that I have done. I'm currently enrolled at Dev Bootcamp but am looking forward to entering the workplace. Feel free to look through my blog posts and projects. </p>
+		<h1> meh </h1> 
+		<p> This is where I tell you bout me </p>
 
 	</div>
 
