add contact tab

--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,12 @@
 		 	</ul> 
 		 </nav>
 	</header>
-
+	
+	<div id = 'contactTab'> 
+	<a href="https://github.com/jthatcher96">
+	<img src = "imgs/git.svg" class = "contactImg">
+	<a href="mailto:jsthatcher96@gmail.com">
+	<img src = "imgs/gmail.svg" class = "contactImg">
 	<div class = "contentContainer">  </div>
 	<div class = "content">  
 		<h1> Projects </h1> 
