--- a/projects/index.html
+++ b/projects/index.html
@@ -25,6 +25,12 @@
 		 </nav>
 	</header>
 
+	<div id = 'contactTab'> 
+	<a href="https://github.com/jthatcher96">
+	<img src = "../imgs/git.svg" class = "contactImg">
+	<a href="mailto:jsthatcher96@gmail.com">
+	<img src = "../imgs/gmail.svg" class = "contactImg">
+	
 	<div class = "contentContainer">  </div>
 	<div class = "content">  
 		<div class = 'left'> <h3> Project 1 </h3> </div>
