--- a/aboutme.html
+++ b/aboutme.html
@@ -25,6 +25,13 @@
 		 </nav>
 	</header>
 
+
+	<div id = 'contactTab'> 
+	<a href="https://github.com/jthatcher96">
+	<img src = "imgs/git.svg" class = "contactImg">
+	<a href="mailto:jsthatcher96@gmail.com">
+	<img src = "imgs/gmail.svg" class = "contactImg">
+	
 	<div class = "contentContainer">  </div>
 	<div class = "content">  
 		<h1> meh </h1> 
