Fix contact bar

--- a/projects/index.html
+++ b/projects/index.html
@@ -27,9 +27,10 @@
 
 	<div id = 'contactTab'> 
 	<a href="https://github.com/jthatcher96">
-	<img src = "../imgs/git.svg" class = "contactImg">
+	<img src = "../imgs/git.svg" class = "contactImg"></a>
 	<a href="mailto:jsthatcher96@gmail.com">
-	<img src = "../imgs/gmail.svg" class = "contactImg">
+	<img src = "../imgs/gmail.svg" class = "contactImg"></a>
+	</div>
 	
 	<div class = "contentContainer">  </div>
 	<div class = "content">  
