--- a/projects/index.html
+++ b/projects/index.html
@@ -19,7 +19,7 @@
 		 		<li> <a href= "../index.html"> Home </a> </li>
 		  		<li> <a href= "../aboutme.html"> About Me </a> </li>
 		 		<li> <a href= "../resume.html"> Resume </a> </li>
-		 		<li> <a href= "projects.html"> Projects </a> </li>
+		 		<li> <a href= "index.html"> Projects </a> </li>
 		 		<li> <a href= "../blog/index.html"> Blog </a> </li>
 		 	</ul> 
 		 </nav>
