--- a/resume.html
+++ b/resume.html
@@ -3,6 +3,7 @@
 <head>
 	<title> Resume </title>
 	<meta charset="utf-8"/>
+	<link rel="stylesheet" type="text/css" href="stylesheets/resume.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/default.css">
 </head>
 <body>
@@ -34,9 +35,92 @@
 
 	<div class = "contentContainer">  </div>
 	<div class = "content">  
-		<h1> Dis my resume </h1> 
-		<p> Here it is </p>
+		<h2> Jack Thatcher </h2> 
+		<h3> Chicago, IL 60625 </h3>
+		<h3> (773)-573-6853 </h3>
+		<h3> jsthatcher96@gmail.com </h3>
+		<hr>
+	<div class = "resumeContent">
+	<h4> Education: </h4>
+	<ul>
+		 The College of Wooster
+			<ul>
+			<li> August 2014 - May 2015 </li>
+			<li> Concentration: Computer Science </li>
+			<li> GPA: 3.2 on a scale of 4.0 </li>
+			</ul>
+		</li>
+<br>
+		 Northside College Prep Highschool
+			<ul>
+			<li> Varsity Swim Team, Varsity Water Polo Team, Concert Choir, Spring Musical, CPS All-City Highschool Exhibition(Photography) </li>
+			<li> GPA: 3.5 on a scale of 4.0 </li>
+			<li> Class of 2014 </li>
+			</ul>
+		</li>
+	</ul>
+	<h4> Work Experience: </h4>
+<ul>
+	  <span class = "workEx"> Lakeview YMCA of Metropolitan Chicago </span> <br> Lifeguard and Camp Counselor
+			<ul>
+			<li> Organized and lead a variety of small and large group activities
+ </li>
+			<li> Identified and responded to camper behavior issues </li>
+			<li> Maintained records including incident reports, activity logs and attendance </li>
+			</ul>
+		</li>
+		</ul>
 
+<ul>
+	  <span class = "workEx"> Mt. Mitchell Golf Course </span> <br> Greenskeeper
+			<ul>
+			<li> Groomed greens and tees daily
+ </li>
+			<li> Maintained the cleanliness and functionality of the course </li>
+			<li> Monitored the health of turf and flora </li>
+			</ul>
+		</li>
+		</ul>
+
+		<ul>
+	 <span class = "workEx">The College of Wooster </span> <br> Swim Meet Management/Office Worker/Lifeguard
+			<ul>
+			<li> Operated swimming timing systems and diving scoring programs
+ </li>
+			<li> Maintained records, files and logs of swimming and tournament data </li>
+			<li> Corresponded with potential recruits </li>
+			</ul>
+		</li>
+		</ul>
+	<ul>
+	 <span class = "workEx"> Camp Celo </span> <br> 
+	"Bobjobber"
+			<ul>
+			<li> Coordinated camp, farm, and trail maintenance
+ </li>
+			<li> Enriched leadership and organization of other staff </li>
+			<li> Assigned day-to-day work to staff ensuring the functionality and cleanliness of camp </li>
+			</ul>
+		</li>
+		Hike Packer
+		<ul>
+			<li> Assessed and organized supplies and equipment for more than 50 people on multiple backpacking trips
+ </li>
+			<li> Coordinated the purchasing and packing of provisions </li>
+			<li> Systematized the process in a guide written for future Hike Packers </li>
+			</ul>
+		Helper
+		<ul>
+			<li> Assisted in the kitchen preparing meals and cleaning for over 100 people daily
+ </li>
+			<li> Coordinated games and activities with campers and other staff </li>
+			<li> Trained new staff in their responsibilities </li>
+			<li> Worked extensively on the farm and with livestock providing produce for the camp and surrounding community</li>
+			</ul>
+
+		</ul>
+	</div>
+	</div>
 	</div>
 
 
