add resume styling

--- a/resume.html
+++ b/resume.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8"/>
 	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/default.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/resume.css">
 </head>
 <body>
 
@@ -38,13 +39,13 @@
 	</div>
 
 	<div id="resumeContainer">
-		<div id="resumeContentContainer">
+		<div class="resumeContentContainer">
 			<div class="resumeTitle">
-				<h3> Skills: </h3>
+				<h3> + skills </h3>
 			</div>
-
+			<hr>
 			<div class="skillContainer">
-				<h4> Web Development: </h4>
+				<h4> WEB DEVELOPMENT: </h4>
 				<ul>
 					<li> Javascript </li>
 					<li> Ruby-on-Rails </li>
@@ -57,7 +58,7 @@
 			</div>
 
 			<div class="skillContainer">
-				<h4> Database: </h4>
+				<h4> DATABASE: </h4>
 					<ul>
 						<li> SQLite </li> 
 						<li> PostgreSQL </li> 
@@ -67,7 +68,7 @@
 			</div>
 
 			<div class="skillContainer">
-				<h4> Other: </h4>
+				<h4> OTHER: </h4>
 					<ul>
 						<li> Object Oriented Design </li> 
 						<li> Empathetic Communication </li> 
@@ -77,23 +78,135 @@
 			</div>
 		</div>
 
-		<div id="resumeContentContainer">
+		<div class="resumeContentContainer">
 			<div class="resumeTitle">
-				<h3> Experience: </h3>
+				<h3> + experience </h3>
+				
+			</div>
+				<hr>
+			<div class="experienceContainer">
+				<div class="experienceTitle">
+				<h4>Dev Bootcamp</h4>
+				<h5>Student Web Developer</h5>
+				</div>
+
+				<div class="experienceText">
+					<ul>
+						<li>Developed skills in Javascript and Ruby over 19 weeks </li>
+						<li>Explored and worked with Rails, Sinatra, Ajax, jQuery, Backbone, Angular, and Ionic</li>
+						<li>Collaborated with other students daily on over 60+ challenges</li>
+						<li>Designed and produced a mobile app in 7 days using Angular and Ionic</li>
+					</ul>
+				</div>
+
+				<div class="experienceDetails">
+					<h6>Chicago, IL</h6>
+					<h6>April 2016 - June 2016</h6>
+				</div>
+
+
 			</div>
 
-			<div class="skillContainer">
 
+			<div class="experienceContainer">
+				<div class="experienceTitle">
+					<h4>The YMCA of <br> Metropolitan Chicago</h4>
+					<h5>Lifeguard and Camp Counsouler</h5>
+				</div>
+
+				<div class="experienceText">
+					<ul>
+						<li>Organized and lead a variety of group activities with 30+ children</li>
+						<li>Identified and responded to camper behavior issues</li>
+						<li>Maintained records including incident reports, activity logs and attendance</li>
+					</ul>
+				</div>
+
+				<div class="experienceDetails">
+					<h6> Chicago, IL</h6>
+					<h6> December 2015 - April 2016 </h6>
+				</div>
 			</div>
 
-			<div class="skillContainer">
+			<div class="experienceContainer">
+				<div class="experienceTitle">
+						<h4>Mt. Mitchell Golf Course</h4>
+						<h5>Full-Time Greenskeeper</h5>
+				</div>
+				<div class="experienceText">
+					<ul>
+						<li>Groomed greens and tees daily</li>
+						<li>Maintained the cleanliness and functionality of the course</li>
+						<li>Monitored the health of turf and flora</li>
+					</ul>
+				</div>
 
+				<div class="experienceDetails">
+					<h6> Burnsville, NC</h6>
+					<h6> August 2015 - December 2015 </h6>
+				</div>
+			</div>
+			
+
+			<div class="experienceContainer">
+				<div class="experienceTitle">
+					<h4>The College of Wooster</h4>
+					<h5>Swim Meet Coordinator</h5>
+				</div>
+				<div class="experienceText">
+					<ul>
+						<li>Introduced and maintaineed the dive score display system</li>
+						<li>Operated swimming timing systems and assisted coaches on deck</li>
+						<li>Maintained records, files and logs of swimming and tournament data</li>
+						<li>Corresponded with potential recruits</li>
+					</ul>
+				</div>
+
+				<div class="experienceDetails">
+					<h6> Wooster, Oh</h6>
+					<h6> August 2014 - May 2015 </h6>
+				</div>
 			</div>
 
-			<div class="skillContainer">
+		</div>
 
+
+		<div class="resumeContentContainer">
+
+			<div class="resumeTitle">
+				<h3> + education </h3>
+
+			</div>
+			<hr>
+			<div>
+				<div class="educationTitle">
+					<h4>Dev Bootcamp</h4>
+					<h5>Chicago, IL</h5>
+				</div>
+
+				<div class="educationDetails">
+					<h5> 2016 </h5>
+				</div>
+			</div>
+
+
+			<div>
+				<div class="educationTitle">
+					<h4>The College of Wooster</h4>
+					<h5>Wooster, OH</h5>
+				</div>
+
+				<div class="educationDetails">
+					<h5> 2014 - 2015 </h5>
+				</div>
 			</div>
 		</div>
+
+
+
+
+
+		
 	</div>
 
 
