Add resume formatting

--- a/resume.html
+++ b/resume.html
@@ -39,7 +39,19 @@
 	</div>
 
 	<div id="resumeContainer">
-		<div class="resumeContentContainer">
+		<div id="summaryContainer">
+			<div id="topContainer">
+				<div class="resumeTitle">
+					<h3> + summary </h3>
+
+				</div>
+				<hr>
+								<p> I'm a developer who has learned to love finding elegant and efficient solutions to problems. As a recent graduate from Dev Bootcamp, a 19-week intensive course focusing on building web applications, team skills and empathetic communication, I'm well-practiced at learning new languages and working with others. I want to continue building my technical skills as a member of a creative team that fosters growth for all in a collaborative environment where we share successes and challenges.
+					</p>
+				</div>
+			</div>
+		
+		<div id="skillsContainer">
 			<div class="resumeTitle">
 				<h3> + skills </h3>
 			</div>
@@ -57,7 +69,7 @@
 				</ul>
 			</div>
 
-			<div class="skillContainer">
+			<div id="shortContainer">
 				<h4> DATABASE: </h4>
 					<ul>
 						<li> SQLite </li> 
