Fix repeated css

--- a/resume.html
+++ b/resume.html
@@ -97,7 +97,7 @@
 			</div>
 				<hr>
 			<div class="experienceContainer">
-				<div class="experienceTitle">
+				<div class="resumeSectionTitle">
 				<h4>Dev Bootcamp</h4>
 				<h5>Student Web Developer</h5>
 				</div>
@@ -111,7 +111,7 @@
 					</ul>
 				</div>
 
-				<div class="experienceDetails">
+				<div class="resumeSectionDetails">
 					<h6>Chicago, IL</h6>
 					<h6>April 2016 - June 2016</h6>
 				</div>
@@ -121,7 +121,7 @@
 
 
 			<div class="experienceContainer">
-				<div class="experienceTitle">
+				<div class="resumeSectionTitle">
 					<h4>The YMCA of <br> Metropolitan Chicago</h4>
 					<h5>Lifeguard and Camp Counsouler</h5>
 				</div>
@@ -134,14 +134,14 @@
 					</ul>
 				</div>
 
-				<div class="experienceDetails">
+				<div class="resumeSectionDetails">
 					<h6> Chicago, IL</h6>
 					<h6> December 2015 - April 2016 </h6>
 				</div>
 			</div>
 
 			<div class="experienceContainer">
-				<div class="experienceTitle">
+				<div class="resumeSectionTitle">
 						<h4>Mt. Mitchell Golf Course</h4>
 						<h5>Full-Time Greenskeeper</h5>
 				</div>
@@ -153,7 +153,7 @@
 					</ul>
 				</div>
 
-				<div class="experienceDetails">
+				<div class="resumeSectionDetails">
 					<h6> Burnsville, NC</h6>
 					<h6> August 2015 - December 2015 </h6>
 				</div>
@@ -161,7 +161,7 @@
 			
 
 			<div class="experienceContainer">
-				<div class="experienceTitle">
+				<div class="resumeSectionTitle">
 					<h4>The College of Wooster</h4>
 					<h5>Swim Meet Coordinator</h5>
 				</div>
@@ -174,7 +174,7 @@
 					</ul>
 				</div>
 
-				<div class="experienceDetails">
+				<div class="resumeSectionDetails">
 					<h6> Wooster, Oh</h6>
 					<h6> August 2014 - May 2015 </h6>
 				</div>
@@ -191,24 +191,24 @@
 			</div>
 			<hr>
 			<div>
-				<div class="educationTitle">
+				<div class="resumeSectionTitle">
 					<h4>Dev Bootcamp</h4>
 					<h5>Chicago, IL</h5>
 				</div>
 
-				<div class="educationDetails">
+				<div class="resumeSectionDetails">
 					<h5> 2016 </h5>
 				</div>
 			</div>
 
 
 			<div>
-				<div class="educationTitle">
+				<div class="resumeSectionTitle">
 					<h4>The College of Wooster</h4>
 					<h5>Wooster, OH</h5>
 				</div>
 
-				<div class="educationDetails">
+				<div class="resumeSectionDetails">
 					<h5> 2014 - 2015 </h5>
 				</div>
 			</div>
@@ -227,7 +227,7 @@
 
 		<div id='resumeContentContainer'>
 
-		<div id="sectionTitle">
+		<div id="resumeSectionTitle">
 
 		<h3> Skills: </h3>
 		</div>
