intial home/resume/projects

--- a/projects/index.html
+++ b/projects/index.html
@@ -3,11 +3,68 @@
 <head>
 	<title> Projects </title>
 	<meta charset="utf-8"/>
-    <link rel="stylesheet" type="text/css" href="stylesheets/default.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/projects.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/default.css">
 </head>
 <body>
 
-	<h1> under construction </h1>
+  <div id="navTop">
+    <nav>
+      <a href= "../index.html">
+        <div class="navButton">
+          <p> home </p>
+        </div>
+      </a>
+
+      <a href= "../resume.html">
+        <div class="navButton">
+          <p> resume </p>
+        </div>
+      </a>
+
+      <a href= "index.html">
+        <div class="navButton">
+          <p> projects </p>
+        </div>
+      </a>
+
+      <a href= "../contact.html">
+        <div class="navButton">
+          <p> contact </p>
+        </div>
+      </a>
+    </nav>
+  </div>
+
+  <div id="projectPageContainer">
+    <div class="projectContainer">
+
+
+
+        <div class="projectImage">
+          <img src="../imgs/murakamiLogin.png">
+        </div>
+    </div>
+      <div class="projectContainer">
+
+      <div class="projectImage">
+          <img src="../imgs/murakamiLogin.png">
+        </div>
+    </div>
+
+    <div class="projectContainer">
+
+        <div class="projectImage">
+          <img src="../imgs/murakamiLogin.png">
+        </div>
+    </div>
+
+    <div class="projectContainer">
+      <div class="projectImage">
+          <img src="../imgs/murakamiLogin.png">
+        </div>
+    </div>
+  </div>
 
 
 	<footer> ©2016 Jack Thatcher. All Rights Reserved. </footer>
