--- a/contact.html
+++ b/contact.html
@@ -1,15 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> Projects </title>
-	<meta charset="utf-8"/>
+  <title> Home </title>
+  <meta charset="utf-8"/>
+  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/default.css">
 </head>
 <body>
 
-	<h1> under construction </h1>
+  <div id="navTop">
+    <nav>
+      <a href= "index.html">
+        <div class="navButton">
+          <p> home </p>
+        </div>
+      </a>
+
+      <a href= "resume.html">
+        <div class="navButton">
+          <p> resume </p>
+        </div>
+      </a>
+
+      <a href= "projects/index.html">
+        <div class="navButton">
+          <p> projects </p>
+        </div>
+      </a>
+
+      <a href= "contact.html">
+        <div class="navButton">
+          <p> contact </p>
+        </div>
+      </a>
+    </nav>
+  </div>
 
 
-	<footer> ©2016 Jack Thatcher. All Rights Reserved. </footer>
+
+  <div id="bioContainer">
+    <div class="sectionTitle">
+      <p> About: </p>
+    </div>
+
+    <div class="sectionText">
+      <p> you guys wanna guess how many we have? um, it looks to me like, two hundred? oh i think it's probably two hundred and fourteen wouldn't you say? two hundred and fourteen is that what you said? i'm like wow, you got a good eye. okay um we will take those back then the simplest thing to do would be to run those through the um, the one of the D nets and put them straight into, formalin. i i've just uh_ uh who_ how many are there? who got closest to guessing the M-and-Ms? um, i i would say about two hundred and fifty. then two hundred and fifty it will be. were they all Spottails? (were some) Commons? Megan? i only saw Spottails but i didn't pick up that many. i mean i picked up a handful but i didn't look at 'em all. so what's the answer? um yeah all Spottails. no that's not what Megan said. two fifty, Spottails plus minnows.  she s- what what it means is we'll assume you've got a cro- a sample, and we will </p>
+    </div>
+
+  </div>
 </body>
 </html>
