--- a/resume.html
+++ b/resume.html
@@ -4,35 +4,35 @@
 	<title> Resume </title>
 	<meta charset="utf-8"/>
 	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="stylesheets/default.css">
+
     <link rel="stylesheet" type="text/css" href="stylesheets/resume.css">
+        <link rel="stylesheet" type="text/css" href="stylesheets/default.css">
 </head>
 <body>
 
 	<div id="navTop">
 		<nav>
-			<a href= "index.html"> 
+			<a href= "index.html">
 				<div class="navButton">
-					<i class='fa fa-user fa-4x'> </i>
+					<p> home </p>
 				</div>
 			</a>
-			
+
 			<a href= "resume.html">
 				<div class="navButton">
-					<i class='fa fa-list fa-4x'> </i>
+					<p> resume </p>
 				</div>
 			</a>
 
 			<a href= "projects/index.html">
 				<div class="navButton">
-					<i class='fa fa-th-large fa-4x'> </i>
+					<p> projects </p>
 				</div>
 			</a>
 
 			<a href= "contact.html">
-
 				<div class="navButton">
-					<i class='fa fa-weixin fa-4x'> </i>
+					<p> contact </p>
 				</div>
 			</a>
 		</nav>
@@ -40,7 +40,7 @@
 
 	<div id="resumeContainer">
 		<div id="summaryContainer">
-			<div id="topContainer">
+			<div class="topContainer">
 				<div class="resumeTitle">
 					<h3> + summary </h3>
 
@@ -50,50 +50,52 @@
 					</p>
 				</div>
 			</div>
-		
+
 		<div id="skillsContainer">
-			<div class="resumeTitle">
-				<h3> + skills </h3>
-			</div>
-			<hr>
-			<div class="skillContainer">
-				<h4> WEB DEVELOPMENT: </h4>
-				<ul>
-					<li> Javascript </li>
-					<li> Ruby-on-Rails </li>
-					<li> Sinatra </li>
-					<li> HTML5 </li>
-					<li> CSS </li>
-					<li> Python </li>
-					<li> Angular </li>
-				</ul>
-			</div>
-
-			<div id="shortContainer">
-				<h4> DATABASE: </h4>
+			<div class = 'topContainer'>
+				<div class="resumeTitle">
+					<h3> + skills </h3>
+				</div>
+				<hr>
+				<div class="skillContainer">
+					<h4> WEB DEVELOPMENT: </h4>
 					<ul>
-						<li> SQLite </li> 
-						<li> PostgreSQL </li> 
-						<li> Active Record </li> 
-						<li> XML </li> 
+						<li> Javascript </li>
+						<li> Ruby-on-Rails </li>
+						<li> Sinatra </li>
+						<li> HTML5 </li>
+						<li> CSS </li>
+						<li> Python </li>
+						<li> Angular </li>
 					</ul>
-			</div>
+				</div>
 
-			<div class="skillContainer">
-				<h4> OTHER: </h4>
-					<ul>
-						<li> Object Oriented Design </li> 
-						<li> Empathetic Communication </li> 
-						<li> Pair Programming </li> 
-						<li> Agile Workflow </li> 
-					</ul>
+				<div id="shortContainer">
+					<h4> DATABASE: </h4>
+						<ul>
+							<li> SQLite </li>
+							<li> PostgreSQL </li>
+							<li> Active Record </li>
+							<li> XML </li>
+						</ul>
+				</div>
+
+				<div class="skillContainer">
+					<h4> OTHER: </h4>
+						<ul>
+							<li> Object Oriented Design </li>
+							<li> Empathetic Communication </li>
+							<li> Pair Programming </li>
+							<li> Agile Workflow </li>
+						</ul>
+				</div>
 			</div>
 		</div>
 
 		<div class="resumeContentContainer">
 			<div class="resumeTitle">
 				<h3> + experience </h3>
-				
+
 			</div>
 				<hr>
 			<div class="experienceContainer">
@@ -158,7 +160,7 @@
 					<h6> August 2015 - December 2015 </h6>
 				</div>
 			</div>
-			
+
 
 			<div class="experienceContainer">
 				<div class="resumeSectionTitle">
@@ -187,38 +189,42 @@
 
 			<div class="resumeTitle">
 				<h3> + education </h3>
-
-			</div>
-			<hr>
-			<div>
+				<hr>
+			<div class="experienceContainer">
 				<div class="resumeSectionTitle">
 					<h4>Dev Bootcamp</h4>
 					<h5>Chicago, IL</h5>
 				</div>
+				<div class="experienceText"></div>
 
 				<div class="resumeSectionDetails">
-					<h5> 2016 </h5>
+					<h6> 2014 - 2015 </h6>
 				</div>
 			</div>
 
 
-			<div>
+			<div class="experienceContainer">
 				<div class="resumeSectionTitle">
 					<h4>The College of Wooster</h4>
 					<h5>Wooster, OH</h5>
 				</div>
+				<div class="experienceText"></div>
 
 				<div class="resumeSectionDetails">
-					<h5> 2014 - 2015 </h5>
+					<h6> 2016 </h6>
 				</div>
 			</div>
+
+
+
+
 		</div>
 
 
 
 
 
-		
+
 	</div>
 
 
@@ -233,7 +239,7 @@
 		</div>
 
 		<div id="sectionText">
-			<div class='skillContainer'> 
+			<div class='skillContainer'>
 			<ul>
 				<li> list </li>
 			</ul>
